--- a/gfarm_v2/branches/2.7/man/man5/gfarm2.conf.5
+++ b/gfarm_v2/branches/2.7/man/man5/gfarm2.conf.5
@@ -1,13 +1,13 @@
 '\" t
 .\"     Title: gfarm2.conf
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
-.\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
-.\"      Date: 31 Aug 2017
+.\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
+.\"      Date: 26 Oct 2017
 .\"    Manual: Gfarm
 .\"    Source: Gfarm
 .\"  Language: English
 .\"
-.TH "GFARM2\&.CONF" "5" "31 Aug 2017" "Gfarm" "Gfarm"
+.TH "GFARM2\&.CONF" "5" "26 Oct 2017" "Gfarm" "Gfarm"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -2296,13 +2296,13 @@ replica_check_remove_grace_used_space_ratio \fIpercentage\fR
 .RS 4
 This directive is effective when replica_check_remove is enabled\&. Unnecessary file replicas are removed only when a percentage of the used capacity is more than the specified percent value\&. The percentage can be specified by an integer value between 0 and 100\&. When 100 is specified, unnecessary file replicas are not removed\&. The default is 0\&.
 .sp
-The percentage can be dynamically changed by the gfstatus command\&. The following example changes to 50%\&.
+The percentage can be dynamically changed by the gfrepcheck command\&. The following example changes to 50%\&.
 .sp
 .if n \{\
 .RS 4
 .\}
 .nf
-	% gfstatus \-Mm "replica_check_remove_grace_used_space_ratio 50"
+	% gfrepcheck remove_grace_used_space_ratio 50
 .fi
 .if n \{\
 .RE
@@ -2327,13 +2327,13 @@ replica_check_remove_grace_time \fIseconds\fR
 .RS 4
 This directive is effective when replica_check_remove is enabled\&. Unnecessary file replicas are removed only when it is not accessed for more than the specified seconds\&. The default is 0\&.
 .sp
-The grace time can be dynamically changed by the gfstatus command\&. The following example changes to 1 week (= 604800 seconds)\&.
+The grace time can be dynamically changed by the gfrepcheck command\&. The following example changes to 1 week (= 604800 seconds)\&.
 .sp
 .if n \{\
 .RS 4
 .\}
 .nf
-	% gfstatus \-Mm "replica_check_remove_grace_time 604800"
+	% gfrepcheck remove_grace_time 604800
 .fi
 .if n \{\
 .RE
@@ -2356,9 +2356,9 @@ Example:
 .PP
 replica_check_reduced_log \fIvalidity\fR
 .RS 4
-When "enable" is specified, log messages from the replica_check may be reduced\&. The default value is "enable"\&. This behavior can be chagned by the
+When "enable" is specified, log messages from the replica_check may be reduced\&. The default value is "enable"\&. This behavior can be dynamically chagned by the
 \fBgfrepcheck reduced_log\fR
-command in online\&.
+command\&.
 .sp
 This parameter is only available in gfmd\&.conf\&.
 .sp
@@ -2377,7 +2377,9 @@ Example:
 .PP
 replica_check_host_down_thresh \fIseconds\fR
 .RS 4
-This statement specifies an interval to start replica check after a gfsd is down\&. The default value is 10800 seconds (3 hours)\&.
+This statement specifies an interval to start replica check after a gfsd is down\&. The default value is 10800 seconds (3 hours)\&. This behavior can be dynamically chagned by the
+\fBgfrepcheck host_down_thresh\fR
+command\&.
 .sp
 This parameter is only available in gfmd\&.conf\&.
 .sp
@@ -2396,7 +2398,9 @@ Example:
 .PP
 replica_check_sleep_time \fInanoseconds\fR
 .RS 4
-This statement specifies the sleep time in nanoseconds during the replica check when gfmd is busy\&. The default value is 100000 nanoseconds (0\&.1 millisecond)\&. The maximum value is 1000000000 nanoseconds (1 second)\&.
+This statement specifies the sleep time in nanoseconds during the replica check when gfmd is busy\&. The default value is 100000 nanoseconds (0\&.1 millisecond)\&. The maximum value is 1000000000 nanoseconds (1 second)\&. This behavior can be dynamically chagned by the
+\fBgfrepcheck sleep_time\fR
+command\&.
 .sp
 This parameter is only available in gfmd\&.conf\&.
 .sp
@@ -2415,7 +2419,9 @@ Example:
 .PP
 replica_check_minimum_interval \fIseconds\fR
 .RS 4
-This statement specifies the minimum interval in seconds, to start the next replica check\&. The default value is 10 seconds\&.
+This statement specifies the minimum interval in seconds, to start the next replica check\&. The default value is 10 seconds\&. This behavior can be dynamically chagned by the
+\fBgfrepcheck minimum_interval\fR
+command\&.
 .sp
 This parameter is only available in gfmd\&.conf\&.
 .sp
@@ -2802,6 +2808,8 @@ This is a grammar of gfarm2\&.conf described by the BNF notation\&.
 	<metadb_replica_remover_by_host_inode_step_statement> |
 	<replica_check_statement> |
 	<replica_check_remove_statement> |
+	<replica_check_remove_grace_used_space_ratio_statement> |
+	<replica_check_remove_grace_time_statement> |
 	<replica_check_reduced_log_statement> |
 	<replica_check_host_down_thresh_statement> |
 	<replica_check_sleep_time_statement> |
@@ -4362,6 +4370,34 @@ This is a grammar of gfarm2\&.conf described by the BNF notation\&.
 .\}
 .nf
 "replica_check_remove" <validity>
+.fi
+.if n \{\
+.RE
+.\}
+.RE
+.PP
+<replica_check_remove_grace_used_space_ratio_statement> ::=
+.RS 4
+.sp
+.if n \{\
+.RS 4
+.\}
+.nf
+"replica_check_remove_grace_used_space_ratio" <number>
+.fi
+.if n \{\
+.RE
+.\}
+.RE
+.PP
+<replica_check_remove_grace_time> ::=
+.RS 4
+.sp
+.if n \{\
+.RS 4
+.\}
+.nf
+"replica_check_remove_grace_time" <number>
 .fi
 .if n \{\
 .RE
