--- a/gfarm_v2/branches/2.7/man/ja/man5/gfarm2.conf.5
+++ b/gfarm_v2/branches/2.7/man/ja/man5/gfarm2.conf.5
@@ -2,12 +2,12 @@
 .\"     Title: gfarm2.conf
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
-.\"      Date: 22 Nov 2017
+.\"      Date: 28 Nov 2017
 .\"    Manual: Gfarm
 .\"    Source: Gfarm
 .\"  Language: English
 .\"
-.TH "GFARM2\&.CONF" "5" "22 Nov 2017" "Gfarm" "Gfarm"
+.TH "GFARM2\&.CONF" "5" "28 Nov 2017" "Gfarm" "Gfarm"
 .\" -----------------------------------------------------------------
 .\" * set default formatting
 .\" -----------------------------------------------------------------
@@ -521,7 +521,11 @@ metadb_server_thread_pool_size \fIスレッド数\fR
 .PP
 metadb_server_job_queue_length \fIキュー長\fR
 .RS 4
-メタデータサーバgfmdのジョブキューのキュー長を指定します。 一度に接続する最大クライアントの数くらいに設定すると効果的です。 デフォルト値は16000です。
+メタデータサーバgfmdのジョブキューのキュー長を指定します。 一度に接続する最大クライアントの数より多い値に設定すると効果的です。
+.sp
+この値は metadb_server_remover_queue_length + (simultaneous_replication_receivers + 1) * ファイルシステムノード数 よりも大きな値に設定する必要がありますので、 ファイルシステムノード数が 754 を越えた場合には、設定が必須となります。
+.sp
+デフォルト値は16000です。
 .sp
 この文はgfmd\&.confのみで有効であり、gfarm2\&.confでは無視されます。
 .sp
@@ -531,7 +535,7 @@ metadb_server_job_queue_length \fIキュー長\fR
 .RS 4
 .\}
 .nf
-	metadb_server_job_queue_length 160
+	metadb_server_job_queue_length 21664
 .fi
 .if n \{\
 .RE
