fix #1017 - gfmd deadlock under stress test of massive replications and removals
this problem has potentially existed for a long time, but became apparent
since the fix for #1015 (too long giant_lock is observed when
both massive number of replications and file removals happen simultaneously)

merging r10447 below from the 2.7 branch should fix this problem:

implement lower priority job enqueue function to gfmd thread pool,
and make the replica remover thread use it,
to avoid that a thread which holds the giant_lock sleeps
while adding a gfmd-initiated replication request to the back_channel job queue.

note that this is a theoretical problem which was found by code reading.
currently the bottleneck of massive removal is to write the journal file
(found by tatebe-san).

this is workaround against #986 - possible long giant_lock at massive number of 
file removable,
and adds the metadb_server_remover_queue_length directive to gfmd.conf

--- a/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
+++ b/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
@@ -5,7 +5,7 @@
 
 <refentry id="gfarm2.conf.5">
 
-<refentryinfo><date>22 Nov 2017</date></refentryinfo>
+<refentryinfo><date>28 Nov 2017</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfarm2.conf</refentrytitle>
@@ -652,6 +652,24 @@ This parameter is only available in gfmd.conf, and ignored in gfarm2.conf.
 <para>For example,</para>
 <literallayout format="linespecific" class="normal">
 	metadb_server_job_queue_length 160
+</literallayout>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><token>metadb_server_remover_queue_length</token> <parameter moreinfo="none">length</parameter></term>
+<listitem>
+<para>This directive specifies the length of job queue which gfmd uses
+for sending replica removal requests to gfsd.
+This value should be less than metadb_server_job_queue_length.
+Default is 160.
+</para>
+<para>
+This parameter is only available in gfmd.conf, and ignored in gfarm2.conf.
+</para>
+<para>For example,</para>
+<literallayout format="linespecific" class="normal">
+	metadb_server_remover_queue_length 40
 </literallayout>
 </listitem>
 </varlistentry>
@@ -2628,6 +2646,7 @@ gfsd uses this setting at its startup by asking gfmd.
 	&lt;metadb_server_stack_size_statement&gt; |
 	&lt;metadb_server_thread_pool_size_statement&gt; |
 	&lt;metadb_server_job_queue_length_statement&gt; |
+	&lt;metadb_server_remover_queue_length_statement&gt; |
 	&lt;metadb_server_remove_scan_log_interval_statement&gt; |
 	&lt;metadb_server_remove_scan_interval_factor_statement&gt; |
 	&lt;metadb_server_heartbeat_interval_statement&gt; |
@@ -2844,6 +2863,11 @@ gfsd uses this setting at its startup by asking gfmd.
 <varlistentry>
 <term>&lt;metadb_server_job_queue_length_statement&gt; ::=</term>
 <listitem><literallayout format="linespecific" class="normal">"metadb_server_job_queue_length" &lt;number&gt;</literallayout></listitem>
+</varlistentry>
+
+<varlistentry>
+<term>&lt;metadb_server_remover_queue_length_statement&gt; ::=</term>
+<listitem><literallayout format="linespecific" class="normal">"metadb_server_remover_queue_length" &lt;number&gt;</literallayout></listitem>
 </varlistentry>
 
 <varlistentry>
