regen for r10805 re: #1010 - IPv6 support
 * gfhost(1): -i option is removed
 * gfarm2.conf: IPv6 adderss format

--- a/gfarm_v2/branches/ipv6/man/ja/man1/gfhost.1
+++ b/gfarm_v2/branches/ipv6/man/ja/man1/gfhost.1
@@ -1,22 +1,13 @@
 '\" t
 .\"     Title: gfhost
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
-.\" Generator: DocBook XSL Stylesheets v1.76.1 <http://docbook.sf.net/>
-.\"      Date: 20 Jan 2010
+.\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
+.\"      Date: 27 Mar 2010
 .\"    Manual: Gfarm
 .\"    Source: Gfarm
 .\"  Language: English
 .\"
-.TH "GFHOST" "1" "20 Jan 2010" "Gfarm" "Gfarm"
-.\" -----------------------------------------------------------------
-.\" * Define some portability stuff
-.\" -----------------------------------------------------------------
-.\" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-.\" http://bugs.debian.org/507673
-.\" http://lists.gnu.org/archive/html/groff/2009-02/msg00013.html
-.\" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-.ie \n(.g .ds Aq \(aq
-.el       .ds Aq '
+.TH "GFHOST" "1" "27 Mar 2010" "Gfarm" "Gfarm"
 .\" -----------------------------------------------------------------
 .\" * set default formatting
 .\" -----------------------------------------------------------------
@@ -53,7 +44,7 @@ gfhost \- gfarm ホスト管理コマンド
 \fBgfsd\fR
 にもアクセスします。
 \fBgfsd\fR
-にアクセスする機能に関しては、そのアクセスに 関するオプションを \-i, \-j, \-U, \-v で指定できます。
+にアクセスする機能に関しては、そのアクセスに 関するオプションを \-j, \-U, \-v で指定できます。
 .PP
 表示機能に関しては、ホスト名の指定を省略することができます。この場合、 メタデータに登録されている全てのホストに関する表示を試みます。 また、\-a および \-D オプションで表示するホストの種類を限定 することもできます。 表示の順序は、ホスト名のアルファベット順ですが、\-L, \-r, \-u オプションで 順序を変更することができます。ただし、\-M 機能
 と、機能を指定しなかった場合
@@ -137,13 +128,6 @@ CPUアーキテクチャを、sparc\-sun\-solaris8 や i386\-redhat8\&.0\-linux 
 \fB\-D\fR \fIドメイン名\fR
 .RS 4
 \-H, \-l, \-M および特に機能を指定しなかった場合で、かつ ホスト名を省略した場合に、このオプションで、表示するドメイン名を 限定できます。
-.RE
-.PP
-\fB\-i\fR
-.RS 4
-%%SYSCONFDIR%%/gfarm2\&.conf ないし $HOME/\&.gfarm2rc 中で「address_use」を指定すると、 アクセスに用いるネットワークアドレスに優先順位をつけることができます。 gfhost コマンドに対しても、この優先順位は影響しますが、\-i オプションを つけると、この指定を無視して
-\fBgfsd\fR
-にアクセス するようになります。
 .RE
 .PP
 \fB\-j\fR \fI並列度\fR
