--- a/gfarm_v2/branches/ipv6/man/man5/gfarm2.conf.5
+++ b/gfarm_v2/branches/ipv6/man/man5/gfarm2.conf.5
@@ -2,12 +2,12 @@
 .\"     Title: gfarm2.conf
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
-.\"      Date: 27 Mar 2018
+.\"      Date: 5 Jul 2018
 .\"    Manual: Gfarm
 .\"    Source: Gfarm
 .\"  Language: English
 .\"
-.TH "GFARM2\&.CONF" "5" "27 Mar 2018" "Gfarm" "Gfarm"
+.TH "GFARM2\&.CONF" "5" "5 Jul 2018" "Gfarm" "Gfarm"
 .\" -----------------------------------------------------------------
 .\" * set default formatting
 .\" -----------------------------------------------------------------
@@ -620,6 +620,44 @@ For example,
 .\}
 .nf
 	metadb_server_remover_queue_length 40
+.fi
+.if n \{\
+.RE
+.\}
+.RE
+.PP
+metadb_server_remove_scan_log_interval \fIseconds\fR
+.RS 4
+This directive specifies the log output interval in seconds about gfmd removal queue processing\&. Default is 3600 seconds\&.
+.sp
+This parameter is only available in gfmd\&.conf, and ignored in gfarm2\&.conf\&.
+.sp
+For example,
+.sp
+.if n \{\
+.RS 4
+.\}
+.nf
+	metadb_server_remove_scan_log_interval 86400
+.fi
+.if n \{\
+.RE
+.\}
+.RE
+.PP
+metadb_server_remove_scan_interval_factor \fInumber\fR
+.RS 4
+This directive specifies the parameter about how much CPU time can be used for gfmd removal queue processing\&. The processing can use 1 / (metadb_server_remove_scan_interval_factor + 1) of the CPU time at most\&. Default is 5\&.
+.sp
+This parameter is only available in gfmd\&.conf, and ignored in gfarm2\&.conf\&.
+.sp
+For example,
+.sp
+.if n \{\
+.RS 4
+.\}
+.nf
+	metadb_server_remove_scan_interval_factor 2
 .fi
 .if n \{\
 .RE
@@ -2735,6 +2773,8 @@ This is a grammar of gfarm2\&.conf described by the BNF notation\&.
 	<metadb_server_thread_pool_size_statement> |
 	<metadb_server_job_queue_length_statement> |
 	<metadb_server_remover_queue_length_statement> |
+	<metadb_server_remove_scan_log_interval_statement> |
+	<metadb_server_remove_scan_interval_factor_statement> |
 	<metadb_server_heartbeat_interval_statement> |
 	<metadb_server_dbq_size_statement> |
 	<metadb_server_back_channel_sndbuf_limit_statement> |
@@ -3188,6 +3228,34 @@ This is a grammar of gfarm2\&.conf described by the BNF notation\&.
 .\}
 .nf
 "metadb_server_remover_queue_length" <number>
+.fi
+.if n \{\
+.RE
+.\}
+.RE
+.PP
+<metadb_server_remove_scan_log_interval_statement> ::=
+.RS 4
+.sp
+.if n \{\
+.RS 4
+.\}
+.nf
+"metadb_server_remove_scan_log_interval" <number>
+.fi
+.if n \{\
+.RE
+.\}
+.RE
+.PP
+<metadb_server_remove_scan_interval_factor_statement> ::=
+.RS 4
+.sp
+.if n \{\
+.RS 4
+.\}
+.nf
+"metadb_server_remove_scan_interval_factor" <number>
 .fi
 .if n \{\
 .RE
