--- a/gfarm_v2/branches/2.6/doc/docbook/ja/ref/man1/gfstatus.1.docbook
+++ b/gfarm_v2/branches/2.6/doc/docbook/ja/ref/man1/gfstatus.1.docbook
@@ -5,7 +5,7 @@
 
 <refentry id="gfstatus.1">
 
-<refentryinfo><date>27 Jan 2016</date></refentryinfo>
+<refentryinfo><date>24 Oct 2018</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfstatus</refentrytitle>
@@ -24,6 +24,19 @@
     <arg choice="opt" rep="norepeat">-P <replaceable>path</replaceable></arg>
     <arg choice="opt" rep="norepeat">-d</arg>
  </cmdsynopsis>
+
+<cmdsynopsis sepchar=" ">
+  <command moreinfo="none">gfstatus</command>
+    <arg choice="opt" rep="norepeat">-P <replaceable>path</replaceable></arg>
+    <group choice="opt" rep="norepeat">
+      <arg choice="plain" rep="norepeat">-d</arg>
+      <arg choice="plain" rep="norepeat">-M</arg>
+    </group>
+    <group choice="opt" rep="norepeat">
+      <arg choice="plain" rep="norepeat">-l</arg>
+      <arg choice="plain" rep="norepeat">-L</arg>
+    </group>
+</cmdsynopsis>
 
 <cmdsynopsis sepchar=" ">
   <command moreinfo="none">gfstatus</command>
@@ -54,13 +67,26 @@
 
 <refsect1 id="description"><title>DESCRIPTION</title>
 
-<para>引数に，設定ディレクティブを指定しない場合，
+<para>引数が指定されず，-l オプションも -L オプションも指定されていない場合，
 Gfarmファイルシステムの情報を表示します．</para>
+
+<para>オプション -l を指定した場合は設定名称の一覧を，
+オプション -L を指定した場合は設定名称とその設定値の一覧を表示します．
+どちらのオプションも -M オプションと組み合わせることにより，
+gfmd の扱う設定名称の一覧を得るか，あるいはローカルホストでの設定名称
+の一覧を得るかを選択できます．
+ただし今のところ，設定名称のうちごく限られたもののみが一覧できます．
+</para>
+<para>例:</para>
+<literallayout format="linespecific" class="normal">
+	$ gfstatus -L
+	$ gfstatus -LM
+</literallayout>
 
 <para>引数に，設定名称を指定した場合，その設定値を表示します．
 -M オプションを指定した場合は，gfmd に設定を問い合わせ，
 指定しない場合は，ローカルホストでの設定値を表示します．
-ただし，今のところ，ごく限られたディレクティブのみが指定できます．
+ただし，今のところ，ごく限られた設定名称のみが指定できます．
 </para>
 <para>例:</para>
 <literallayout format="linespecific" class="normal">
@@ -93,10 +119,21 @@ gfmd 上のその設定を書き換えます．
 </varlistentry>
 
 <varlistentry>
-<term><option>-M</option></term>
+<term><option>-l</option></term>
 <listitem>
 <para>
-設定値の問い合わせや，設定の変更を，gfmd に対して行ないます．
+設定名称の一覧を表示します。
+-M オプションと組み合わせて使うことができます．
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-L</option></term>
+<listitem>
+<para>
+設定名称のとその値の一覧を表示します。
+-M オプションと組み合わせて使うことができます．
 </para>
 </listitem>
 </varlistentry>
@@ -107,6 +144,15 @@ gfmd 上のその設定を書き換えます．
 <para>
 設定の変更を行ないます．
 -M オプションと組み合わせて使います．
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-M</option></term>
+<listitem>
+<para>
+設定値の問い合わせや，設定の変更を，gfmd に対して行ないます．
 </para>
 </listitem>
 </varlistentry>
